# Task-Manager

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  render.yml  setup.cfg
.github/workflows/: test.yml
task_manager/: forms.py  settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_taskandlabel_tasks_labels.py
task_manager/tasks/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/templates/users/: create.html  delete.html  index.html  update.html
